--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-- Terminology change, use Bind instead of Match.
+
 - Globals in config -> Defaults
 - Globals sets timeouts, port, etc.
 
@@ -18,3 +18,5 @@
 
 - Add leastconn upsteam selection option
 - Healthcheck on single upstream
+
+- Extend Bind / RequestMatcher, to allow binding based on headers and other features.
