--- a/TODO
+++ b/TODO
@@ -12,11 +12,10 @@ Needed to replace ELBs in-front of ECS services:
     - How to minimize downtime due to changes? Update on error?
 
 Nice to haves:
-- Allow configs to set timeouts, port, etc.
 - Consider using DNS for all types of upstreams, instead of decoupling.
 - Plug-in customizable Transport
 - Allow response transformations.
 - Add leastconn upsteam selection option
-- Healthcheck on single upstream
-- Extend Bind / RequestMatcher, to allow binding based on headers and other features.
+- Healthcheck on upstreams
+- Extend Bind / RequestMatcher, to allow binding based on headers and other features
 - Debug page shows connections, failures, etc.
