--- a/TODO
+++ b/TODO
@@ -3,6 +3,8 @@ Needed to replace NGINX for my personal sites:
 - Upstream retry settings.
 - Upstream failover settings.
 - Gracefully handle downstream errors.
+- Support multiple hosts.
+- Simple redirect support.
 
 Needed to replace ELBs in-front of ECS services:
 - ECS upstream provider, use AWS SDK
@@ -19,3 +21,4 @@ Nice to haves:
 - Healthcheck on upstreams
 - Extend Bind / RequestMatcher, to allow binding based on headers and other features
 - Debug page shows connections, failures, etc.
+- For locus_host, consider rewriting URLs or setting a cookie so pages actually function.
